More tool stuff discussed, slight reshuffle, work on sorting contents page out. Need to capitalize the chapters in the contents page and talk about texture version of sphere. Then it's evaluation time.

--- a/Final-Report/background.tex
+++ b/Final-Report/background.tex
@@ -18,7 +18,7 @@ As with all medical imaging techniques the benefits and risks need to be weighed
 % ---------- MRI ---------- %
 % ------------------------- %
 \newpage
-\section{MRI (Magnetic Resonance Imaging)}\label{background:mri}\cite{howmriworks}
+\section{MRI}\label{background:mri}\cite{howmriworks}
 
 MRI uses a strong magnetic field and radio waves to produce images of the body. MRI can be used to produce 2D, 3D and even 4D images and has the advantage that it doesn’t use any ionizing radiation during the scanning process.
 
@@ -35,7 +35,7 @@ There are also a number of different ways of acquiring the scan. SSFSE (Single S
 
 If the contrast that can be achieved with MRI is insufficient for the imaging then a contrast agent, such as gadolinium, can be administered to enhance the quality of the image.
 
-\subsection{Fetal MRI}\label{background:fetalmri}\cite{fetalmri}
+\section{Fetal MRI}\label{background:fetalmri}\cite{fetalmri}
 
 Since MRI, like US, is a non-invasive procedure that doesn’t use ionizing radiation it is ideal for use in fetal imaging. While US remains the most common imaging modality used during pregnancy MRI has a number of advantages; in particular it has better contrast in soft tissue which allows individual organs to be better differentiated. US however remains the cheaper of the two and is unlikely to be replaced as the main fetal imaging tool in the near future.
 
@@ -130,7 +130,7 @@ An aggregation of all three will be able to give a useful overview of the situat
 % ------- SVD / PCA ------- %
 % ------------------------- %
 \newpage
-\section{Singular Value Decomposition and Principal Component Analysis}\label{background:svdpca}
+\section{SVD and PCA}\label{background:svdpca}
 SVD breaks down a matrix, $A$, into three components: $U$, $D$ and $V$.
 
 \begin{align}
