--- a/Final-Report/contents.tex
+++ b/Final-Report/contents.tex
@@ -8,8 +8,8 @@
 %*******************************************************
 \pdfbookmark[1]{\contentsname}{tableofcontents}
 
-\setcounter{tocdepth}{3} % <-- 2 includes up to subsections in the ToC
-\setcounter{secnumdepth}{3} % <-- 3 numbers up to subsubsections
+% \setcounter{tocdepth}{2} % <-- 2 includes up to subsections in the ToC
+% \setcounter{secnumdepth}{3} % <-- 3 numbers up to subsubsections
 
 \tableofcontents 
 
