--- a/Final-Report/main.tex
+++ b/Final-Report/main.tex
@@ -23,6 +23,10 @@
 % New Lines not Indentation for Paragraphs
 \usepackage[parfill]{parskip}
 
+% Styling Contents Page
+\usepackage{tocstyle} 
+\usetocstyle{classic}
+
 % Style Headings
 \usepackage{titlesec}
 \usepackage{indentfirst}
@@ -81,6 +85,7 @@
 \usepackage{graphicx}
 \usepackage{caption}
 \usepackage{subcaption}
+\usepackage{wrapfig}
 
 % Font
 \usepackage{fontspec}
@@ -93,11 +98,6 @@
 % Date
 \usepackage{babel}
 \usepackage[]{datetime}
-
-% Styling Contents Page
-\usepackage{tocstyle}
-\usepackage{tocloft}
-\usepackage{etoolbox}
 
 \usepackage{textcase}
 
