Quantitative evaluation has been spreadsheet-a-lized.

--- a/Final-Report/bibliography.bib
+++ b/Final-Report/bibliography.bib
@@ -176,3 +176,10 @@
     howpublished = "http://www.commontk.org/docs/html/CommandLineModules_Page.html",
     note         = "{Last Accessed: 07/06/15}"
 }
+
+@MISC {mrilab},
+    author       = "Fang Liu ",
+    title        = "MRiLab",
+    howpublished = "http://mrilab.sourceforge.net/",
+    note         = "{Last Accessed: 08/06/15}"
+}
