--- a/Final-Report/evaluation.tex
+++ b/Final-Report/evaluation.tex
@@ -1,3 +1,28 @@
 \chapter{evaluation}\label{chapter:evaluation}
 
-Some more text.
+To evaluate the project researchers at both Imperial College London and Kings College London have been consulted for feedback. Each part of the plugin has been evaluated separately.
+
+\section{Scan Simulation}
+For the scan simulation part of the project feedback from the users was needed firstly on whether this was a useful feature for them. If it was, then limitations of the current implementation needed to be found - in particular are there any parameters that they would expect to be able to control that aren't available or are there some more advanced MRI scanning artefacts that need simulating.
+
+The potential users were asked ''?
+
+<graph of is this useful>
+
+Did they think it was useful?
+
+The users were then asked ''?
+
+They said x, y, z.
+
+Then came the question on realism which provoked the largest response. As it turns out there are many things that researchers would like to see integrated. Here they are <insert here>
+
+This raises the question of how much realism needs to be simulated to effectively test reconstruction algorithms. Highly realistic MRI simulation has been done before and tools, such as MRiLab\cite{mrilab}, allow the user to experiment with different scan sequences, coils and more. Whether this level of detail is needed to accurately test a reconstruction algorithm requires more research to find out.
+
+\section{Reconstruction}
+Opinion. Landmarks. Time to do it. Feedback. Different feedback from different points of view.
+
+\section{Visualization}
+Three things. Understand. Clear. Configurable.
+
+% General Format -> What we wanted to find out. Go through each question. For those that are quantitative give us a graph. For those that aren't then talk about What they said.
