--- a/Final-Report/bibliography.bib
+++ b/Final-Report/bibliography.bib
@@ -183,3 +183,26 @@
     howpublished = "http://mrilab.sourceforge.net/",
     note         = "{Last Accessed: 08/06/15}"
 }
+
+@TECHREPORT {fetalmovement,
+    author      = "Janet A. DiPietro and Marc H. Bornstein and Kathleen A. Costigan and Eva K. Pressman and Chun-Shin Hahn and Kathleen Painter and Barbara A. Smith and Linda J. Yi",
+    title       = "What Does Fetal Movement Predict About Behavior During the First Two Years of Life?",
+    institution = "Johns Hopkins University and National Institute of Child Health and Human Development",
+    year        = "2001",
+    address     = "http://www.jhsph.edu/research/centers-and-institutes/johns-hopkins-fetal-development-project/_materials/_publications/movement.pdf"
+}
+
+@MISC {mrilab},
+    author       = "Fang Liu ",
+    title        = "MRiLab",
+    howpublished = "http://mrilab.sourceforge.net/",
+    note         = "{Last Accessed: 08/06/15}"
+}
+
+@BOOK {basicsofmri,
+    author    = "Joseph P. Hornak",
+    title     = "The Basics of MRI",
+    publisher = "Rochester Institute of Technology",
+    year      = "1997",
+    address   = "https://www.cis.rit.edu/htbooks/mri/chap-8/chap-8.htm"
+}
